--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.1
+  scribble: ^0.9.0
 
 dev_dependencies:
   flutter_test:
