--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.1
   scribble: ^0.9.0
+  tflite_flutter: ^0.11.0
+  image: ^4.0.18
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +22,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/models/mnist.tflite
