--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   scribble: ^0.9.0
   tflite_flutter: ^0.11.0
   image: ^4.0.18
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +25,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/models/mnist.tflite
+    - assets/models/alphabet_25_50_trained.tflite
