--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.1
   scribble: ^0.9.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
