--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.1
   scribble: ^0.9.0
+  shared_preferences: ^2.2.2
   tflite_flutter: ^0.11.0
   image: ^4.0.18
   path_provider: ^2.1.3
