--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.1.0
-  firebase_auth: ^5.1.1
-  scribble: ^0.9.0
-  shared_preferences: ^2.2.2
-  tflite_flutter: ^0.11.0
-  image: ^4.0.18
-  path_provider: ^2.1.3
+  firebase_core: ^2.31.0
+  firebase_auth: ^4.19.4
+  cloud_firestore: ^4.17.3
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
