--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.1
+  cloud_firestore: ^5.0.0
+  firebase_storage: ^12.0.0
   scribble: ^0.9.0
   shared_preferences: ^2.2.2
 
