--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   firebase_storage: ^12.0.0
   scribble: ^0.9.0
   shared_preferences: ^2.2.2
+  image: ^4.0.18
+  path_provider: ^2.1.3
+
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +26,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/lingua_flow.png
