--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   firebase_auth: ^5.1.1
   scribble: ^0.9.0
   shared_preferences: ^2.2.2
+  file_picker: ^8.0.0
+  csv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
