--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_auth: ^5.1.1
   cloud_firestore: ^5.0.0
   firebase_storage: ^12.0.0
+  firebase_app_check: ^0.3.2+10
   scribble: ^0.9.0
   shared_preferences: ^2.2.2
   image: ^4.0.18
