--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   shared_preferences: ^2.2.2
   image: ^4.0.18
   path_provider: ^2.1.3
+  firebase_app_check: ^0.3.0
 
 
 dev_dependencies:
